--- a/packages/hns-library/src/components/Drawer/Drawer.css
+++ b/packages/hns-library/src/components/Drawer/Drawer.css
@@ -7,15 +7,20 @@
   left: 0;
   height: 100%;
   overflow-y: auto;
+  overflow-x: visible;
   width: 100%;
   max-width: 290px;
   z-index: 100;
   transform: scale(1.05) translateX(-100%);
-  transition: transform 0.25s ease-out;
+  transition: .25s ease-out;
+  box-shadow: 10px 0 20px rgba(0, 0, 0, 0);
+  
 }
+
 
 .hns-drawer.open {
   transform: scale(1) translateX(0);
+  box-shadow: 10px 0 240px rgba(0, 0, 0, 0.3), 2px 0 20px rgba(0, 0, 0, .2);
 }
 .hns-drawer-close {
   position: absolute;
