--- a/packages/hancss/index.css
+++ b/packages/hancss/index.css
@@ -11,6 +11,9 @@
 @import url(styles/themes/purple/dark.css);
 @import url(styles/themes/purple/light.css);
 
+/* UI */
+@import url(styles/button.css);
+
 *,
 *::before,
 *::after {
