--- a/packages/hancss/styles/themes/default/dark.css
+++ b/packages/hancss/styles/themes/default/dark.css
@@ -4,4 +4,6 @@
   --hns-app-text-color: #f1f1f1;
   --hns-border-color-default: hsla(var(--hns-app-hue), 30%, 70%, .6);
   --hns-panel-fill-default: #333;
+  /* Block styles */
+  --hns-block-background: #f2f2f2;
 }
