--- a/packages/hancss/styles/typography.css
+++ b/packages/hancss/styles/typography.css
@@ -9,3 +9,7 @@ h1,h2,h3,h4,h5,h6,p {
   font-weight: var(--hns-heading-weight, 600);
   color: var(--hns-heading-color, inherit);
 }
+
+.hns-text--contrast {
+  font-weight: var(--hns-text-contrast-weight, 600);
+}
