--- a/packages/hancss/index.css
+++ b/packages/hancss/index.css
@@ -36,7 +36,7 @@ body {
 }
 
 html {
-  font-size: min(max(16px, 2vw), 22px);
+  font-size: min(max(16px, 16px + 1vw), 24px);
 }
 
 img,video,iframe {
@@ -91,4 +91,8 @@ img,video,iframe {
 .hns-align-content-center {
   display: flex;
   align-content: center;
+}
+
+.hns-footer {
+  margin-top: auto;
 }
