--- a/packages/hancss/styles/button.css
+++ b/packages/hancss/styles/button.css
@@ -12,6 +12,7 @@
   text-decoration: none;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.005) 0px 0.783403px 0.783403px 0px, rgba(0, 0, 0, 0.01) 0px 1.92107px 1.92107px 0px, rgba(0, 0, 0, 0.023) 0px 3.63429px 3.63429px 0px, rgba(0, 0, 0, 0.04) 0px 6.35486px 6.35486px 0px, rgba(0, 0, 0, 0.07) 0px 11.0474px 11.0474px 0px, rgba(0, 0, 0, 0.127) 0px 20.2497px 20.2497px 0px, rgba(0, 0, 0, 0.25) 0px 40px 40px 0px;
 }
 
 
