--- a/packages/hancss/styles/themes/default/dark.css
+++ b/packages/hancss/styles/themes/default/dark.css
@@ -1,9 +1,6 @@
 [data-theme="default-dark"]  {
   --hns-app-hue: 0;
-  --hns-app-background: hsl(0, 0%, 0%);
+  --hns-app-background-color: hsl(0, 0%, 0%);
   --hns-app-text-color: #f1f1f1;
-  --hns-border-color-default: hsla(var(--hns-app-hue), 30%, 70%, .6);
-  --hns-panel-fill-default: #333;
-  /* Block styles */
-  --hns-block-background: #f2f2f2;
+  --hns-app-line-color: #000;
 }
