--- a/packages/hancss/styles/themes/default/light.css
+++ b/packages/hancss/styles/themes/default/light.css
@@ -1,11 +1,19 @@
-[data-theme="default-light"]  {
-  --hns-app-hue: 0;
-  --hns-app-background: hsl(0, 0%, 100%);
+:root  {
+  /* Global app colors */
+  --hns-app-background-color: hsl(0, 0%, 100%);
   --hns-app-text-color: #222;
-  --hns-border-color-default: hsla(var(--hns-app-hue), 30%, 70%, .6);
-  --hns-panel-fill-default: #F5F5F2;
+  --hns-app-line-color: hsla(0, 0%, 80%, 80%);
+  --hns-border-color: #d9d9d9;
 
-  /* Block styles */
-  --hns-block-background: #f2f2f2;
+  /* TOKENS */
+  --hns-fill-contrast-25: #f2f2f2;
+  --hns-fill-contrast-50: #e5e5e5;
+  --hns-fill-contrast-75: #d9d9d9;
+  --hns-fill-contrast-100: #cccccc;
+  
+  /* ISLAND */
+  --hns-island-background-color: #fff;
+  --hns-island-text-color: var(--hns-app-text-color);
+  --hns-island-line-color: var(--hns-app-line-color);
 }
 
