--- a/packages/hancss/styles/themes/purple/dark.css
+++ b/packages/hancss/styles/themes/purple/dark.css
@@ -1,9 +1,8 @@
 [data-theme="purple-dark"]  {
   --hns-app-hue: 246;
-  --hns-app-background: hsl(246, 85%, 13%);
+  --hns-app-background-color: hsl(246, 85%, 13%);
   --hns-app-text-color: #f1f1f1;
-  --hns-border-color-default: hsla(var(--hns-app-hue), 30%, 70%, .6);
-  --hns-panel-fill-default: hsl(246, 85%, 10%);
+  --hns-line-color: hsla(var(--hns-app-hue), 30%, 70%, .6);  
 }
 
 [data-theme="purple-dark"] .hns-button-cta {
